Attempt to backport the mod to 1.17.1 (Failed)